--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "lodash": "^4.3.0"
   },
   "dependencies": {
-    "owl.carousel": "^2.2.0"
+    "object-fit-images": "^3.2.3",
+    "owl.carousel": "^2.2.0",
+    "svg4everybody": "^2.1.8"
   }
 }
