--- a/package.json
+++ b/package.json
@@ -64,8 +64,10 @@
     "lodash": "^4.3.0"
   },
   "dependencies": {
+    "dotdotdot": "^1.7.0",
     "object-fit-images": "^3.2.3",
     "owl.carousel": "^2.2.0",
+    "slick-carousel": "^1.6.0",
     "svg4everybody": "^2.1.8"
   }
 }
